--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="a">Meu Site de Viagens</h1>
     <div class="d">
-        <a href="C:\Users\rti_26\Documents\postila-main\blog.html">
+        <a href="/">
             <Button>Ínico</Button>
         </a>
         <a href="#">
@@ -24,7 +24,7 @@
     </div>
     <div class="t">
 
-        <a href="C:\Users\rti_26\Documents\postila-main\blog1.html">
+        <a href="./blog1.html">
 
             <div class="b">
                 <img src="tokyo.jpg" alt="tokyo">
@@ -34,7 +34,7 @@
             </a>
     </div>
 
-    <a href="C:\Users\rti_26\Documents\postila-main\blog2.html">
+    <a href="./blog2.html">
 
         <div class="b">
             <img src="nova york.jpg" alt="nova york">
@@ -43,7 +43,7 @@
             <link rel="stylesheet" href="blog2.html">
         </a>
         </div>
-    <a href="C:\Users\rti_26\Documents\postila-main\blog3.html">
+    <a href="./blog3.html">
 
         <div class="b">
             <img src="paris.jpg" alt="paris">
