--- a/blog2.html
+++ b/blog2.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="a">Meu Site de Viagens</h1>
     <div class="d">
-        <a href="C:\Users\rti_26\Documents\postila-main\blog.html">
+        <a href="/">
             <Button>Ínico</Button>
         </a>
         <a href="#">
