--- a/blog1.html
+++ b/blog1.html
@@ -13,10 +13,10 @@
 <body>
     <h1 class="a">Meu Site de Viagens</h1>
     <div class="d">
-        <a href="/">
+        <a href="/index.html">
             <Button>Ínico</Button>
         </a>
-        <a href="#">
+        <a href="https://natsue6.github.io/test/blog1.html">
             <button>Destinos</button>
         </a>
         <a href="#">
