--- a/blog2.html
+++ b/blog2.html
@@ -12,10 +12,10 @@
 <body>
     <h1 class="a">Meu Site de Viagens</h1>
     <div class="d">
-        <a href="/">
+        <a href="https://natsue6.github.io/test/index.html">
             <Button>Ínico</Button>
         </a>
-        <a href="#">
+        <a href="https://natsue6.github.io/test/index.html">
             <button>Destinos</button>
         </a>
         <a href="#">
