--- a/blog3.html
+++ b/blog3.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="a">Meu Site de Viagens</h1>
     <div class="d">
-        <a href="/">
+        <a href="https://natsue6.github.io/test/index.html">
             <Button>Ínico</Button>
         </a>
         <a href="#">
